<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nova_viagem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLightBackground"
    tools:context="amztrip.cursoandroid.com.amztrip.ViagemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreenNewTrip" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/nova_viagem" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="30dp"
            android:text="Destino" />

        <EditText
            android:id="@+id/destino"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrayMidBackground"
            android:textColor="@color/colorBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorGrayLightDivisor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="30dp"
            android:text="Tipo de viagem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/tipoViagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/lazer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lazer" />

                <RadioButton
                    android:id="@+id/negocios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/negocios" />

            </RadioGroup>


        <!--</LinearLayout>-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="#ededed" />-->

        <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orientation="horizontal">&ndash;&gt;-->

            <!--&lt;!&ndash;&lt;!&ndash;<LinearLayout&ndash;&gt;&ndash;&gt;-->
                <!--&lt;!&ndash;&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;&ndash;&gt;-->
                <!--&lt;!&ndash;&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;&ndash;&gt;-->
                <!--&lt;!&ndash;&lt;!&ndash;android:orientation="vertical">&ndash;&gt;&ndash;&gt;-->

                <!--&lt;!&ndash;&lt;!&ndash;<TextView&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;android:layout_marginLeft="@dimen/margin_default"&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;android:layout_marginTop="20dp"&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;android:text="Data de saída" />&ndash;&gt;&ndash;&gt;-->

                <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;<Button&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:id="@+id/dataSaida"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:layout_width="120dp"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:layout_marginLeft="20dp"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:layout_marginTop="5dp"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:onClick="selecionarData"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:background="@color/colorGreenNewTrip"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:inputType="date"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:text="Selecionar"&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
                    <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;android:textColor="@color/colorWhite" />&ndash;&gt;&ndash;&gt;&ndash;&gt;-->

            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->

            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:orientation="vertical">&ndash;&gt;-->

                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginLeft="@dimen/margin_default"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginTop="20dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="Data de chegada" />&ndash;&gt;-->

                <!--&lt;!&ndash;<Button&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/dataChegada"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="120dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="40dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginLeft="20dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginTop="5dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:background="@color/colorGreenNewTrip"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:onClick="selecionarData"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="Selecionar"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="date"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:textColor="@color/colorWhite" />&ndash;&gt;-->

            <!--</LinearLayout>-->

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="#ededed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="30dp"
            android:text="Orçamento" />

        <EditText
            android:id="@+id/orcamento"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrayMidBackground"
            android:inputType="numberDecimal"
            android:textColor="@color/colorBlack" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorGrayLightDivisor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="30dp"
            android:text="Número de pessoas" />

        <EditText
            android:id="@+id/quantidadePessoas"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrayMidBackground"
            android:inputType="number"
            android:textColor="@color/colorBlack" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="50dp"
            android:background="@color/colorGreenNewTrip"
            android:text="@string/create_new_trip"
            android:textAllCaps="false"
            android:onClick="salvarViagem"
            android:textColor="@color/colorWhite">

        </Button>

    </LinearLayout>

</ScrollView>
